# large-doc-compress

./: .env  Dockerfile  ai_condense_text.py  pyproject.toml  readme.md  requirements.txt  update_packages.sh
backend/: ai_condense_text.py  main.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
