[project]
name = "ai-text-condenser"
version = "0.1.0"
description = "A project to condense text using AI and NLP techniques"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "tqdm==4.66.1",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "nltk==3.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88