[project]
name = "ai-text-condenser"
version = "0.1.0"
description = "AI-powered text condensation tool"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.7.4",
    "fastapi>=0.103.2",
    "nltk>=3.8.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "uvicorn>=0.23.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88